--- a/Custom Search Engine 1/style.css
+++ b/Custom Search Engine 1/style.css
@@ -3,6 +3,7 @@
 :root {
     --color-primary: #0b4b86;
     --color-secondary: #313a4b;
+    --color-background-main: rgb(230, 239, 252);
 }
 
 * {
@@ -15,7 +16,13 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 0.9em;
     color: var(--color-secondary);
-    background: rgb(230, 239, 252);
+    background: var(--color-background-main);
+    overflow-x: hidden;
+    transition: background 1s;
+}
+
+body.unfocused {
+    background: rgba(0, 0, 0, 0.6);
 }
 
 li {
@@ -72,6 +79,87 @@ nav {
 
 .nav-bar .container .nav-menu ul li {
     padding: 0 10px;
+}
+
+.nav-bar .container .nav-menu ul li i.fas {
+    cursor: pointer;
+    color: var(--color-primary);
+    transition: 0.3s;
+}
+
+.nav-bar .container .nav-menu ul li i.fas:hover {
+    color: var(--color-secondary);
+}
+
+/* Nav drawer */
+.nav-drawer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: var(--color-primary);
+    width: 377px;
+    height: 100%;
+    z-index: 10;
+    padding: 7px 15px;
+    color: #fff;
+    transition: 1s;
+    overflow-y: auto;
+}
+
+.nav-drawer.closed {
+    position: fixed;
+    right: -377px;
+}
+
+#close-nav-drawer {
+    position: absolute;
+    display: inline;
+    cursor: pointer;
+    align-self: flex-end;
+}
+
+.nav-drawer a {
+    color: var(--color-background-main);
+    font-weight: 300;
+}
+
+.nav-drawer a:hover {
+    font-weight: 500;
+}
+
+.nav-drawer .container {
+    padding: 0;
+}
+
+.nav-drawer-category {
+    padding: 12px 0 3px 0;
+    border-bottom: 1px solid var(--color-secondary);
+}
+
+.nav-drawer-category:last-child {
+    border-bottom: 0;
+}
+
+.nav-drawer-category p {
+    font-size: 1rem;
+}
+
+.nav-drawer-category ul li {
+    padding: 8px;
+}
+
+.nav-drawer-category ul li i {
+    margin-right: 5px;
+}
+
+.nav-drawer-category.apps ul {
+    display: flex;
+}
+
+.nav-drawer-category.apps ul div {
+    width: 50%;
 }
 
 /* Search section */
