Added #filler that disables the main area when navigation drawer is open in 'Custom Search Engine 1'.

--- a/Custom Search Engine 1/style.css
+++ b/Custom Search Engine 1/style.css
@@ -91,6 +91,16 @@ nav {
     color: var(--color-secondary);
 }
 
+/* Filler */
+.filler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+}
+
 /* Nav drawer */
 .nav-drawer {
     display: flex;
