Added 'Help' page and styling for 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/default-theme.css
+++ b/BeginnersPad v2/styles/default-theme.css
@@ -5,4 +5,5 @@
     --color-font: #222;
     --color-links: #333;
     --color-background-main: #fee;
+    --color-form-border: rgba(0, 0, 0, 0.2);
 }
