--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -42,6 +42,12 @@
     border-radius: 20px 20px 0 0;
 }
 
+.card .image .stars {
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.8);
+    padding: 8px;
+    font-size: 0.9rem;
+}
+
 .card .image img {
     position: absolute;
     top: 8px;
