--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -210,6 +210,19 @@ nav .nav-menu .badge li.selected a {
     padding-top: 5px;
 }
 
+/* Page - /view-topics */
+.section-topics .item {
+    padding: 15px 0;
+}
+
+.section-topics .item h4 {
+    font-size: 1.1rem;
+}
+
+.section-topics .item p {
+    padding: 5px 0;
+}
+
 /* Page - /sign-up & /sign-in */
 /* Auth (sign-up & sign-in) */
 .section-auth .container {
