Added styling for '.search-bar' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -61,7 +61,7 @@ nav h1 a {
 nav h1 {
     font-size: 1.4rem;
     line-height: 2.2rem;
-    transition: font-size 0.15s;
+    /* transition: font-size 0.15s; */
     border-width: 2px;
     border-style: double none double none;
     /* border-radius: 2px; */
