Renamed references of '#listing' to '#section-listing' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -147,7 +147,7 @@ nav .nav-menu .badge li.selected a {
 
 /* Listings */
 /* see "utilities.css" for cards section */
-#listings {
+#section-listings {
     margin-top: 50px;
 }
 
