--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -374,9 +374,9 @@ select.btn-dropdown {
     padding: 15px 0;
 }
 
-.section-read-links .item h4 {
+/* .section-read-links .item h4 {
     font-size: 1.1rem;
-}
+} */
 
 .section-read-links .item p {
     padding: 5px 0;
