--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -374,10 +374,26 @@ select.btn-dropdown {
     padding: 15px 0;
 }
 
+.section-read-links .item.item-bottom-border {
+    border-bottom: 1px dashed #666;
+}
+
+.section-read-links .item.item-bottom-border:last-child {
+    border-bottom: none;
+}
+
 /* .section-read-links .item h4 {
     font-size: 1.1rem;
 } */
 
-.section-read-links .item p {
+.section-read-links .item h5 {
+    font-size: 0.9rem;
+}
+
+.section-read-links .item .title-main {
+    margin-top: 12px;
+}
+
+.section-read-links .item .text-main {
     padding: 5px 0;
 }
