Renamed '#section-listings' to '.section-listings' in 'view-listings.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/default-theme.css
+++ b/BeginnersPad v2/styles/default-theme.css
@@ -6,4 +6,5 @@
     --color-links: #333;
     --color-background-main: #fee;
     --color-form-border: rgba(0, 0, 0, 0.2);
+    /* --color-panel */
 }
