Added '.panel-grp' to 'utilities.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -397,3 +397,8 @@ select.btn-dropdown {
 .section-read-links .item .text-main {
     padding: 5px 0;
 }
+
+/* .panel-grp */
+.panel-grp {
+    display: grid;
+}
