Added '.tickets-categories-user' and '.btn-grp' to 'view-tickets-user.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -588,3 +588,7 @@ nav .nav-menu .badge li.selected a {
     text-align: justify;
 }
 
+/* Page - /view-tickets-user */
+.tickets-categories-user {
+    margin-left: 5px;
+}
